test/svcclusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-custerip
spec:
  selector:
    app: piyapan
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
